# eparts-search

./: pyproject.toml
src/api/: main.py
src/api/common/: __init__.py  base_site.py  item.py
src/api/sites/: dummy.py  sengoku.py
src/web/: package-lock.json
src/web/src/: App.jsx
