[tool.poetry]
name = "eparts-search"
version = "0.1.0"
description = ""
authors = ["motty.mio2 <motty.mio2@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
playwright = "^1.24.0"
fastapi = "^0.79.0"
uvicorn = "^0.18.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
